samples/_failures_safe/1761503505_af1d25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c2d8867.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_4c2d8867.c:173:9: error: expected expression at end of input
  173 |         if (
      |         ^~
./samples/SAFE/__tmp_4c2d8867.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c2d8867.c:173:9: error: expected declaration or statement at end of input
